# Advanced-Lighting-OpenGL

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Mesh.h  Mesh.h~  Model.h  Model.h~  Shader.h  Shader.h~  main.cpp  main.cpp~  stb_image.cpp~  stb_image.h~
